# otus-microservice-architecture

dz2/: Dockerfile  main.py
dz3/: deployment.yaml  ingress.yaml  service.yaml
dz4/: Dockerfile  app-values.yaml  collection.json  postgres-values.yml
dz4/app/: pyproject.toml
dz4/app/migrations/: env.py
dz4/app/migrations/versions/: b44d48706e20_initial_migration.py
dz4/app/src/: config.py  db.py  main.py  models.py  schemas.py
dz4/chart/: Chart.yaml  values.yaml
dz4/chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  job-migrations.yaml  service.yaml
