[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["nozv"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.120.3"}
alembic = "^1.17.1"
asyncpg = "^0.30.0"
python-dotenv = "^1.2.1"
uvicorn = "^0.38.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
